# codif-ape-agentic-rag

./: README.md  pyproject.toml  setup.sh
archive/: pyproject_draft.toml  requirements.txt
hands-on/: test_conversable_agent.py  test_tool_caller_agent.py  test_tool_caller_agent_pydantic.py  test_tool_caller_search.py
src/: main.py
